# webadb-rs

./: Cargo.toml  README.md  advanced.html  bugreport.html  index.html  package.json  test-host.sh  test-wasm.sh
.cargo/: config.toml
.github/workflows/: ci.yml
src/: auth.rs  client.rs  lib.rs  parsers.rs  protocol.rs  sync.rs  transport.rs  wasm.rs
tests/: README.md  client_tests.rs  protocol_tests.rs  sync_tests.rs  wasm_test.rs
